--- a/csharp/event bus/1. event bus.md
+++ b/csharp/event bus/1. event bus.md
@@ -1,6 +1,10 @@
 # 使用 C# 实现一个 Event Bus
 
-先实现一些约束，实现`IEvent`约束事件，实现`IEventHandler<TEvent>`和`IAsyncEvnetHandler<TEvent>`来约束事件的处理程序。
+Github仓库地址：[soda-event-bus](https://github.com/DonPangPang/soda-event-bus)
+
+## 实现一些基本约束
+
+先实现一些约束，实现`IEvent`约束事件，实现`IAsyncEvnetHandler<TEvent> where TEvent:IEvent`来约束事件的处理程序。
 
 ```csharp
 public interface IEvent
@@ -8,16 +12,280 @@ public interface IEvent
 
 }
 
-public interface IEventHandler<TEvent> where TEvent: IEvnent
+public interface IAsyncEventHandler<in TEvent> where TEvent : IEvent
 {
+    Task HandleAsync(IEvent @event);
 
-    void HandleEvent(TEvent @event);
     void HandleException(IEvent @event, Exception ex);
 }
 
-public interface IEventAsyncHandler<TEvent> where TEvent: IEvnent
+```
+
+接下来规定一下咱们的`IEventBus`，会有哪些操作方法。基本就是发布和订阅。
+
+```csharp
+public interface IEventBus
 {
-    async Task HandleEventAsync(TEvent @evnet);
-    void HandleException(TEvent @event, Exception ex);    
+    void Publish<TEvent>(TEvent @event) where TEvent : IEvent;
+    Task PublishAsync<TEvent>(TEvent @event) where TEvent : IEvent;
+
+    void OnSubscribe<TEvent>() where TEvent : IEvent;
+}
+```
+
+## 实现一个本地事件总线
+
+### 本地事件处理
+
+本地事件的处理我打算采用两种方式实现，一种是`LocalEventBusManager`即本地事件管理，第二种是`LocalEventBusPool`池化本地事件。
+
+#### LocalEvnetBusManager
+
+`LocalEventBusManager`主要在单一管道内进行处理，集中进行消费。
+
+```csharp
+public interface ILocalEventBusManager<in TEvent>where TEvent : IEvent
+{
+    void Publish(TEvent @event);
+    Task PublishAsync(TEvent @event) ;
+    
+    void AutoHandle();
+}
+
+public class LocalEventBusManager<TEvent>(IServiceProvider serviceProvider):ILocalEventBusManager<TEvent>
+    where TEvent: IEvent
+{
+    readonly IServiceProvider _servicesProvider = serviceProvider;
+
+    private readonly Channel<TEvent> _eventChannel = Channel.CreateUnbounded<TEvent>();
+
+    public void Publish(TEvent @event)
+    {
+        Debug.Assert(_eventChannel != null, nameof(_eventChannel) + " != null");
+        _eventChannel.Writer.WriteAsync(@event);
+    }
+
+    private CancellationTokenSource Cts { get; } = new();
+
+    public void Cancel()
+    {
+        Cts.Cancel();
+    }
+    
+    public async Task PublishAsync(TEvent @event)
+    {
+        await _eventChannel.Writer.WriteAsync(@event);
+    }
+
+    public void AutoHandle()
+    {
+        // 确保只启动一次
+        if (!Cts.IsCancellationRequested) return;
+
+        Task.Run(async () =>
+        {
+            while (!Cts.IsCancellationRequested)
+            {
+                var reader = await _eventChannel.Reader.ReadAsync();
+                await HandleAsync(reader);
+            }
+        }, Cts.Token);
+    }
+
+    async Task HandleAsync(TEvent @event)
+    {
+        var handler = _servicesProvider.GetService<IAsyncEventHandler<TEvent>>();
+
+        if (handler is null)
+        {
+            throw new NullReferenceException($"No handler for event {@event.GetType().Name}");
+        }
+        try
+        {
+            await handler.HandleAsync(@event);
+        }
+        catch (Exception ex)
+        {
+            handler.HandleException( @event, ex);
+        }
+    }
+}
+
+```
+
+### LocalEventBusPool
+
+`LocalEventBusPool`即所有的Event都会有一个单独的管道处理，单独消费处理，并行能力更好一些。
+
+```csharp
+public sealed class LocalEventBusPool(IServiceProvider serviceProvider)
+{
+    private readonly IServiceProvider _serviceProvider = serviceProvider;
+
+    private class ChannelKey
+    {
+        public required string Key { get; init; }
+        public int Subscribers { get; set; }
+
+        public override bool Equals(object? obj)
+        {
+            if (obj is ChannelKey key)
+            {
+                return string.Equals(key.Key, Key, StringComparison.OrdinalIgnoreCase);
+            }
+
+            return false;
+        }
+
+        public override int GetHashCode()
+        {
+            return 0;
+        }
+    }
+
+    private Channel<IEvent> Rent(string channel)
+    {
+        _channels.TryGetValue(new ChannelKey() { Key = channel }, out var value);
+
+        if (value != null) return value;
+        value = Channel.CreateUnbounded<IEvent>();
+        _channels.TryAdd(new ChannelKey() { Key = channel }, value);
+        return value;
+    }
+
+    private Channel<IEvent> Rent(ChannelKey channelKey)
+    {
+        _channels.TryGetValue(channelKey, out var value);
+        if (value != null) return value;
+        value = Channel.CreateUnbounded<IEvent>();
+        _channels.TryAdd(channelKey, value);
+        return value;
+    }
+
+    private readonly ConcurrentDictionary<ChannelKey, Channel<IEvent>> _channels = new();
+
+    private CancellationTokenSource Cts { get; } = new();
+
+    public void Cancel()
+    {
+        Cts.Cancel();
+        _channels.Clear();
+        Cts.TryReset();
+    }
+
+    public async Task PublishAsync<TEvent>(TEvent @event) where TEvent : IEvent
+    {
+        await Rent(typeof(TEvent).Name).Writer.WriteAsync(@event);
+    }
+
+    public void Publish<TEvent>(TEvent @event) where TEvent : IEvent
+    {
+        Rent(typeof(TEvent).Name).Writer.TryWrite(@event);
+    }
+
+    public void OnSubscribe<TEvent>() where TEvent : IEvent
+    {
+        var channelKey = _channels.FirstOrDefault(x => x.Key.Key == typeof(TEvent).Name).Key ??
+                         new ChannelKey() { Key = typeof(TEvent).Name };
+        channelKey.Subscribers++;
+
+        Task.Run(async () =>
+        {
+            try
+            {
+                while (!Cts.IsCancellationRequested)
+                {
+                    var @event = await ReadAsync(channelKey);
+
+                    var handler = _serviceProvider.GetService<IAsyncEventHandler<TEvent>>();
+                    if (handler == null) throw new NullReferenceException($"No handler for Event {typeof(TEvent).Name}");
+                    try
+                    {
+                        await handler.HandleAsync((TEvent)@event);
+                    }
+                    catch (Exception ex)
+                    {
+                        handler.HandleException((TEvent)@event, ex);
+                    }
+                }
+            }
+            catch (Exception e)
+            {
+                throw new InvalidOperationException("Error on onSubscribe handler", e);
+            }
+        }, Cts.Token);
+    }
+
+    private async Task<IEvent> ReadAsync(string channel)
+    {
+        return await Rent(channel).Reader.ReadAsync(Cts.Token);
+    }
+
+    private async Task<IEvent> ReadAsync(ChannelKey channel)
+    {
+        return await Rent(channel).Reader.ReadAsync(Cts.Token);
+    }
+}
+```
+
+### LocalEventBus
+
+实现`LocalEventBus`继承自`IEventBus`即可，如果有需要扩展的方法自行添加，池化和管理器的情况单独处理。
+
+```csharp
+public interface ILocalEventBus: IEventBus
+{
+
+}
+
+public class LocalEventBus(IServiceProvider serviceProvider, LocalEventBusOptions options) : ILocalEventBus
+{
+    private  LocalEventBusPool? EventBusPool => serviceProvider.GetService<LocalEventBusPool>();
+    
+    
+    public void Publish<TEvent>(TEvent @event) where TEvent : IEvent
+    {
+        if (options.Pool)
+        {
+            Debug.Assert(EventBusPool != null, nameof(EventBusPool) + " != null");
+            EventBusPool.Publish(@event);
+        }
+        else
+        {
+            var manager = serviceProvider.GetService<LocalEventBusManager<TEvent>>();
+            if (manager is null) throw new NullReferenceException($"No manager for event {typeof(TEvent).Name}, please add singleton service it.");
+            manager.Publish(@event);
+        }
+    }
+
+    public async Task PublishAsync<TEvent>(TEvent @event) where TEvent : IEvent
+    {
+        if (options.Pool)
+        {
+            Debug.Assert(EventBusPool != null, nameof(EventBusPool) + " != null");
+            await EventBusPool.PublishAsync(@event);
+        }
+        else
+        {
+            var manager = serviceProvider.GetService<LocalEventBusManager<TEvent>>();
+            if (manager is null) throw new NullReferenceException($"No manager for event {typeof(TEvent).Name}, please add singleton service it.");
+            await manager.PublishAsync(@event);
+        }
+    }
+
+    public void OnSubscribe<TEvent>() where TEvent : IEvent
+    {
+        if (options.Pool)
+        {
+            Debug.Assert(EventBusPool != null, nameof(EventBusPool) + " != null");
+            EventBusPool.OnSubscribe<TEvent>();
+        }
+        else
+        {
+            var manager = serviceProvider.GetService<LocalEventBusManager<TEvent>>();
+            if (manager is null) throw new NullReferenceException($"No manager for event {typeof(TEvent).Name}, please add singleton service it.");
+            manager.AutoHandle();
+        }
+    }
 }
 ```
