--- a/csharp/event bus/1. event bus.md
+++ b/csharp/event bus/1. event bus.md
@@ -1,5 +1,17 @@
 # 使用 C# 实现一个 Event Bus
 
+Event Bus（事件总线）是一种用于在应用程序内部或跨应用程序组件之间进行事件通信的机制。它允许不同的组件通过发布和订阅事件来进行解耦和通信。
+
+在给定的代码片段中，我们可以看到一个使用C#实现的Event Bus。它定义了一些接口和类来实现事件的发布和订阅。
+
+首先，我们有两个基本的约束接口：`IEvent`和`IAsyncEventHandler<TEvent>`。IEvent是一个空接口，用于约束事件的类型。`IAsyncEventHandler<TEvent>`是一个泛型接口，用于约束事件处理程序的类型。它定义了处理事件的异步方法HandleAsync和处理异常的方法HandleException。
+
+接下来，我们有一个IEventBus接口，它定义了一些操作方法用于发布和订阅事件。其中，`Publish<TEvent>`和`PublishAsync<TEvent>`方法用于发布事件，而`OnSubscribe<TEvent>`方法用于订阅事件。
+
+然后，我们看到一个实现了本地事件总线的类`LocalEventBusManager<TEvent>`。它实现了`ILocalEventBusManager<TEvent>`接口，用于在单一管道内处理本地事件。它使用了一个`Channel<TEvent>`来存储事件，并提供了发布事件的方法`Publish`和`PublishAsync`。此外，它还提供了一个自动处理事件的方法`AutoHandle`。
+
+总的来说，`Event Bus`提供了一种方便的方式来实现组件之间的松耦合通信。通过发布和订阅事件，组件可以独立地进行操作，而不需要直接依赖于彼此的实现细节。这种机制可以提高代码的可维护性和可扩展性。
+
 Github仓库地址：[soda-event-bus](https://github.com/DonPangPang/soda-event-bus)
 
 ## 实现一些基本约束
