--- a/csharp/event bus/1. event bus.md
+++ b/csharp/event bus/1. event bus.md
@@ -301,3 +301,7 @@ public class LocalEventBus(IServiceProvider serviceProvider, LocalEventBusOption
     }
 }
 ```
+
+## 分布式事件总线
+
+根据需要扩展即可，基本逻辑相同，但可能需要增加确认机制等。
